# Django-coursework

./: .env.sample  .gitignore  README.md  pyproject.toml
blog/migrations/: 0001_initial.py
config/: settings.py  urls.py
mailing/: forms.py  models.py  urls.py  views.py
mailing/migrations/: 0001_initial.py  0002_initial.py
mailing/templates/mailing/: client_confirm_delete.html  client_list.html  mailing_confirm_delete.html  mailing_list.html  message_confirm_delete.html  message_list.html
main/: urls.py  views.py
main/templates/main/: base.html  prohome.html
main/templates/main/includes/: inc_menu.html
users/migrations/: 0001_initial.py
users/templates/: user_detail.html  user_list.html
