[tool.poetry]
name = "dcp"
version = "0.1.0"
description = ""
authors = ["Makoto <makoto@mak.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
psycopg2-binary = "^2.9.9"
redis = "^5.0.6"
pillow = "^10.3.0"
ipython = "^8.25.0"
django-apscheduler = "^0.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
