[tool.poetry]
name = "dcp"
version = "0.1.0"
description = ""
authors = ["Makoto <makoto@mak.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
redis = "^5.0.6"
pillow = "^10.3.0"
ipython = "^8.25.0"
django-apscheduler = "^0.6.2"
psycopg2-binary = "^2.9.9"
apscheduler = "^3.10.4"
asgiref = "^3.8.1"
asttokens = "^2.4.1"
colorama = "^0.4.6"
decorator = "^5.1.1"
executing = "^2.0.1"
flake8 = "^7.1.0"
jedi = "^0.19.1"
matplotlib-inline = "^0.1.7"
mccabe = "^0.7.0"
parso = "^0.8.4"
prompt-toolkit = "^3.0.47"
pure-eval = "^0.2.2"
pycodestyle = "^2.12.0"
pyflakes = "^3.2.0"
pygments = "^2.18.0"
wcwidth = "^0.2.13"
tzlocal = "^5.2"
tzdata = "^2024.1"
traitlets = "^5.14.3"
stack-data = "^0.6.3"
sqlparse = "^0.5.0"
six = "^1.16.0"
pytz = "^2024.1"
python-dotenv = "^1.0.1"
django = "4.2"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
